--- a/Solution/Index.html
+++ b/Solution/Index.html
@@ -8,43 +8,37 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Tienda</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Carrito</a></li>
-            </ul>
-        </nav>
+        <div class="header-top">
+            <div class="logo">Fruver</div>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li class="dropdown">
+                        <a href="#">Páginas</a>
+                        <ul class="dropdown-content">
+                            <li><a href="#">Carrito</a></li>
+                            <li><a href="#">Checkout</a></li>
+                            <li><a href="#">Comentarios</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contáctenos</a></li>
+                </ul>
+            </nav>
+            <div class="header-icons">
+                <span class="search-icon">🔍</span>
+                <span class="cart-icon">🛒</span>
+                <span class="user-icon">👤</span>
+            </div>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Buscar productos...">
+            <button>Buscar</button>
+        </div>
     </header>
     <main>
-        <section class="banner">
-            <h1>100% Organic Foods</h1>
-            <p>Fresh Veggies & Fruits Foods</p>
-            <button>Shop Now</button>
-        </section>
-        <section class="features">
-            <div>Free Shipping</div>
-            <div>Secure Payment</div>
-            <div>30 Day Return</div>
-            <div>24/7 Support</div>
-        </section>
-        <section class="products">
-            <article>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.gastronomiavasca.net%2Fes%2Fgastro%2Fglossary%2Fuva-morada&psig=AOvVaw02ZxvJgGl3cwpfNCZMVP4D&ust=1715125772279000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCID2rMSb-oUDFQAAAAAdAAAAABAE" alt="Uvas">
-                <h2>Uvas</h2>
-                <p>$4.99 / kg</p>
-                <button>Add to cart</button>
-            </article>
-            <article>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fferiaadomicilio.cl%2Fproduct%2Fnaranjas-kilo%2F&psig=AOvVaw2DhcDGza3bqGEH-WHjFnb1&ust=1715125796291000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKCT4M-b-oUDFQAAAAAdAAAAABAY" alt="Naranjas">
-                <h2>Naranjas</h2>
-                <p>$4.99 / kg</p>
-                <button>Add to cart</button>
-            </article>
-        
-        </section>
+        <!-- Contenido principal aquí -->
     </main>
     <footer>
         <p>© 2024 Fruver Shop. All rights reserved.</p>
