creacion del baner

--- a/Solution/Index.html
+++ b/Solution/Index.html
@@ -38,7 +38,42 @@
         </div>
     </header>
     <main>
-        <!-- Contenido principal aquí -->
+        <section class="main-banner">
+            <div class="text-content">
+                <h1>100% Organic Foods</h1>
+                <h2>Organic Veggies & Fruits Foods</h2>
+                <form class="search-form">
+                    <input type="text" placeholder="Search">
+                    <button type="submit">Submit Now</button>
+                </form>
+            </div>
+            <div class="image-content">
+                <img src="https://img.freepik.com/fotos-premium/fruta-fresca_181303-670.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1714953600&semt=ais" alt="Frutas y verduras">
+            </div>
+        </section>
+        
+        <section class="features">
+            <div class="feature">
+                <img src="free-shipping.png" alt="Free Shipping">
+                <h3>Free Shipping</h3>
+                <p>Free on order over $300</p>
+            </div>
+            <div class="feature">
+                <img src="security.png" alt="Secure Payment">
+                <h3>Secure Payment</h3>
+                <p>100% security payment</p>
+            </div>
+            <div class="feature">
+                <img src="return.png" alt="30 Day Return">
+                <h3>30 Day Return</h3>
+                <p>30 day money guarantee</p>
+            </div>
+            <div class="feature">
+                <img src="support.png" alt="24/7 Support">
+                <h3>24/7 Support</h3>
+                <p>Support every time fast</p>
+            </div>
+        </section>
     </main>
     <footer>
         <p>© 2024 Fruver Shop. All rights reserved.</p>
