creación de target soporte al cliente.

--- a/Solution/Index.html
+++ b/Solution/Index.html
@@ -51,29 +51,30 @@
                 <img src="https://img.freepik.com/fotos-premium/fruta-fresca_181303-670.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1714953600&semt=ais" alt="Frutas y verduras">
             </div>
         </section>
-        
-        <section class="features">
-            <div class="feature">
-                <img src="free-shipping.png" alt="Free Shipping">
+        <section class="features-grid">
+            <div class="feature-item">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4tCfjIUx9H0ucquOLDpndn7TDtQ-FUb-YL8WZ2KZOmQ&s" alt="Free Shipping">
                 <h3>Free Shipping</h3>
                 <p>Free on order over $300</p>
             </div>
-            <div class="feature">
-                <img src="security.png" alt="Secure Payment">
-                <h3>Secure Payment</h3>
+            <div class="feature-item">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh390ZVS4cELbg0e3s64iYHDdSm0AlrD8zdJ5EjZFRjQ&s" alt="Secure Payment">
+                <h3>Security Payment</h3>
                 <p>100% security payment</p>
             </div>
-            <div class="feature">
-                <img src="return.png" alt="30 Day Return">
+            <div class="feature-item">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-XZXVIYQSzx1wLpKeiQekQYlJcYfNnAL1Gf42wmZ-3A&s" alt="30 Day Return">
                 <h3>30 Day Return</h3>
                 <p>30 day money guarantee</p>
             </div>
-            <div class="feature">
-                <img src="support.png" alt="24/7 Support">
+            <div class="feature-item">
+                <img src="https://cdn-icons-png.flaticon.com/512/2593/2593341.png" alt="24/7 Support">
                 <h3>24/7 Support</h3>
                 <p>Support every time fast</p>
             </div>
         </section>
+
+        
     </main>
     <footer>
         <p>© 2024 Fruver Shop. All rights reserved.</p>
