Adición del header grid de productos para titulo y filtro, adición de filtros en header grid productos

--- a/Solution/Index.html
+++ b/Solution/Index.html
@@ -69,6 +69,15 @@
                 <p>Support every time fast</p>
             </div>
         </section>
+        <div class="product-header">
+            <h2>Productos Orgánicos</h2>
+            <div class="product-filters">
+                <button class="filter-button active">Todos los Productos</button>
+                <button class="filter-button">Vegetales</button>
+                <button class="filter-button">Frutas</button>
+                <button class="filter-button">Pan de cereales</button>
+            </div>
+        </div>
         <section class="product-grid">
             <div class="product-card">
                 <img src="https://www.gastronomiavasca.net/uploads/image/file/3436/uva_morada.jpg" alt="Grapes">
