Ajuste Baner 1, colores contrastes con wave

--- a/Solution/Index.html
+++ b/Solution/Index.html
@@ -37,15 +37,18 @@
         <section class="main-banner">
             <div class="text-content">
                 <h1>100% Organic Foods</h1>
-                <h2>Organic Veggies & Fruits Foods</h2>
+                <h2>Organic Veggies & Fruits     Foods</h2>
                 <form class="search-form">
                     <input type="text" placeholder="Search">
                     <button type="submit">Submit Now</button>
                 </form>
             </div>
-            <div class="image-content">
-                <img src="https://img.freepik.com/fotos-premium/fruta-fresca_181303-670.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1714953600&semt=ais" alt="Frutas y verduras">
+            <div class="image-slider">
+                <div class="slider-arrow left-arrow" onclick="previousImage()">&#9664;</div>
+                <img src="https://img.freepik.com/fotos-premium/fruta-fresca_181303-670.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1714953600&semt=ais" alt="Frutas" class="fruits-image">
+                <div class="slider-arrow right-arrow" onclick="nextImage()">&#9654;</div>
             </div>
+            
         </section>
         <section class="features-grid">
             <div class="feature-item">
@@ -56,9 +59,9 @@
             <div class="feature-item">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh390ZVS4cELbg0e3s64iYHDdSm0AlrD8zdJ5EjZFRjQ&s" alt="Secure Payment">
                 <h3>Security Payment</h3>
-                <p>100% security payment</p>
-            </div>
-            <div class="feature-item">
+                    <p>100% security payment</p>
+                </div>
+                <div class="feature-item">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-XZXVIYQSzx1wLpKeiQekQYlJcYfNnAL1Gf42wmZ-3A&s" alt="30 Day Return">
                 <h3>30 Day Return</h3>
                 <p>30 day money guarantee</p>
